# portfolio

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.github/: dependabot.yml
.github/workflows/: django.yml
config/: asgi.py  routing.py  urls.py
config/django/: base.py
config/settings/: files_and_storages.py  logging.py
docker/: beats_entrypoint.sh  celery_entrypoint.sh  local.Dockerfile  production.Dockerfile
scripts/: bootstrap.sh
src/api/: urls.py
src/api/tests/pagination/: test_get_paginated_response.py
src/authentication/: apis.py  services.py
src/authentication/tests/apis/: test_user_login.py
src/common/: consumer.py  services.py
src/common/tests/services/: test_model_update.py
src/consumers/: echo_consumer.py  routing.py
src/core/: logging.py
src/errors/: apis.py  services.py
src/files/: admin.py  apis.py  models.py  services.py  urls.py
src/files/migrations/: 0001_initial.py
src/google/: apis.py  services.py  urls.py
src/portfolio/: admin.py  apps.py  models.py  views.py
src/portfolio/migrations/: 0001_initial.py  0002_remove_field_type.py  0003_alter_field_description.py  0004_alter_field_description.py  0005_remove_portfolio_details_fieldvalue_portfolio_and_more.py  0006_alter_fieldvalue_field.py
src/portfolio/templates/portfolio/: home.html
src/users/: admin.py  apis.py  filters.py  models.py  selectors.py  services.py
src/users/tests/services/: test_user_create.py
src/utils/: strings.py
