[tool.black]
line-length = 120
# By default, `black` will ignore skip configuration when paths are explicitly provided.
# In order for `pre-commit` to respect this configuration, `force-exclude` needs to be explicitly set.
force-exclude = 'migrations'

[tool.isort]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"
# By default, `isort` will ignore skip configuration when paths are explicitly provided.
# In order for `pre-commit` to respect this configuration, `filter_files` needs to be set to true.
# https://jugmac00.github.io/blog/isort-and-pre-commit-a-friendship-with-obstacles/
filter_files = true
skip_glob = ["*/migrations/*", "config/*"]

[tool.poetry]
name = "portfolio"
version = "1.0"
description = "Portfolio Project"
authors = ["Shacklebolt13"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.10"
django-environ = "0.9.0"
psycopg2 = "2.9.5"
djangorestframework = "3.14.0"
whitenoise = "6.5.0"
django-filter = "23.2"
django-extensions = "3.2.1"
django-cors-headers = "4.1.0"
django-storages = "1.13.1"
drf-jwt = "1.19.2"
boto3 = "1.26.0"
attrs = "22.1.0"
gunicorn = "20.1.0"
sentry-sdk = "1.14.0"
requests = "2.31.0"
google-api-python-client = "2.86.0"
google-auth = "2.21.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "1.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pytest = "7.4.0"
pytest-django = "4.5.2"
factory-boy = "3.2.1"
faker = "18.6.0"
ipdb = "0.13.13"
ipython = "8.10.0"
django-debug-toolbar = "3.8.1"
mypy = "1.2.0"
django-stubs = "1.14.0"
djangorestframework-stubs = "1.8.0"
boto3-stubs = "1.26.81"
flake8 = "6.0.0"
isort = "5.12.0"
pre-commit = "3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = true
omit = [
    "*/urls.py",
    "*/routing.py",
    "*/asgi.py",
    "*/wsgi.py",
]


[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true
